Fix footer wrapping

--- a/website/theme/sass/main.scss
+++ b/website/theme/sass/main.scss
@@ -237,7 +237,7 @@ footer {
 
     a {
         margin: 0 20px;
-        padding: 0 20px;
+        padding: 0 15px;
 
         background-color: #ffffff;
     }
